--- a/closed_page.html
+++ b/closed_page.html
@@ -4,7 +4,7 @@
   <head>
     <link rel="stylesheet" href="style.css">
     <title>Page not for indexing for indexing</title>
-    <meta http-equiv="refresh" content="0; url=https://marixna.github.io/lab3web.github.io/index.html">
+    <meta http-equiv="refresh" content="0; url=https://ttm145.github.io/index.html">
   </head>
 
 
